--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -11,6 +11,10 @@ body {
   overflow-x: hidden;
 }
 
+body > * {
+  overflow-x: hidden;
+}
+
 .addKitInputForm {
   all: unset;
   border: 4px solid var(--main-font-color);
@@ -420,21 +424,58 @@ body {
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  gap: 45px;
 }
 
-.media-section .media-wrapper .media-logo-container .france-inter {
-  height: 250px;
-  width: 250px;
+@supports not (-webkit-gap: 45px) {
+  .media-section .media-wrapper .media-logo-container > * {
+    margin-left: 15px;
+  }
 }
 
-.media-section .media-wrapper .media-logo-container .figaro {
+.media-section .media-wrapper .france-inter {
+  height: 125px;
+  width: 125px;
+}
+
+.media-section .media-wrapper .brut {
+  height: 50px;
+  width: 210px;
+}
+
+.media-section .media-wrapper .Phenyx {
   height: 100px;
-  width: 420px;
+  width: 100px;
 }
 
-.media-section .media-wrapper .media-logo-container .brut {
+.media-section .media-wrapper .FranceTrois {
+  height: 50px;
+  width: 150px;
+}
+
+.media-section .media-wrapper .Letudiant {
+  height: 50px;
+  width: 150px;
+}
+
+.media-section .media-wrapper .FranceInfo {
+  height: 125px;
+  width: 166px;
+}
+
+.media-section .media-wrapper .Mediavenir {
   height: 100px;
-  width: 420px;
+  width: 100px;
+}
+
+.media-section .media-wrapper .Franprix {
+  height: 65px;
+  width: 200px;
+}
+
+.media-section .media-wrapper .LaGazetteMontpellier {
+  height: 50px;
+  width: 150px;
 }
 
 .info-banner-column-wrapper .checklist-illustration {
@@ -583,13 +624,13 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 40px;
+  gap: 20px;
   margin-top: 40px;
 }
 
 @supports not (-webkit-gap: 40px) {
   .conclusion .recap * {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
 }
 
@@ -642,7 +683,7 @@ body {
     margin-bottom: 10px;
   }
   .conclusion footer .footer-column-wrapper .footer-left-column .footer-contact-section .instagram-logo {
-    margin-left: 15px;
+    margin-left: 0px;
   }
 }
 
@@ -746,6 +787,12 @@ body {
 @media only screen and (max-device-width: 1830px) {
   .introduction-wrapper .introduction-column-wrapper .left-column .hero-title {
     font-size: 3.5vw;
+  }
+  .media-section .media-wrapper .media-logo-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
@@ -876,31 +923,48 @@ body {
     width: 90vw;
   }
   .media-section .media-wrapper .media-logo-container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
     gap: 45px;
   }
   @supports not (-webkit-gap: 45px) {
-    .media-section .media-wrapper .media-logo-container .media-logo-container {
-      margin: 45px;
-    }
-    .media-section .media-wrapper .media-logo-container .media-logo-container > * {
-      margin: 45px;
+    .media-section .media-wrapper .media-logo-container > * {
+      margin-top: 45px;
     }
   }
   .media-section .media-wrapper .media-logo-container .france-inter {
     height: 125px;
     width: 125px;
   }
-  .media-section .media-wrapper .media-logo-container .figaro {
-    height: 50px;
-    width: 210px;
-  }
   .media-section .media-wrapper .media-logo-container .brut {
     height: 50px;
     width: 210px;
+  }
+  .media-section .media-wrapper .media-logo-container .Phenyx {
+    height: 125px;
+    width: 125px;
+  }
+  .media-section .media-wrapper .media-logo-container .FranceTrois {
+    height: 50px;
+    width: 150px;
+  }
+  .media-section .media-wrapper .media-logo-container .Letudiant {
+    height: 50px;
+    width: 150px;
+  }
+  .media-section .media-wrapper .media-logo-container .FranceInfo {
+    height: 125px;
+    width: 166px;
+  }
+  .media-section .media-wrapper .media-logo-container .Mediavenir {
+    height: 150px;
+    width: 150px;
+  }
+  .media-section .media-wrapper .media-logo-container .Franprix {
+    height: 65px;
+    width: 200px;
+  }
+  .media-section .media-wrapper .media-logo-container .LaGazetteMontpellier {
+    height: 50px;
+    width: 150px;
   }
 }
 
@@ -922,10 +986,11 @@ body {
     }
   }
   .introduction-wrapper .introduction-column-wrapper .left-column .hero-title {
-    font-size: 7vw;
+    font-size: 9vw;
   }
   .introduction-wrapper .introduction-column-wrapper .left-column .hero-description {
     font-size: 4vw;
+    margin-bottom: 20px;
   }
   .introduction-wrapper .introduction-column-wrapper {
     margin-bottom: 20px;
@@ -1058,6 +1123,12 @@ body {
   .donation-wrapper {
     overflow: hidden;
   }
+  .donation-wrapper .donation-heart-illustration {
+    margin-bottom: 40px;
+  }
+  .heartContainerTextCopyright {
+    margin-bottom: 40px;
+  }
   .donation-wrapper .donation-title {
     font-size: 7vw;
   }
@@ -1082,6 +1153,9 @@ body {
   }
   .conclusion .recap-sub-title {
     font-size: 8vw;
+  }
+  .conclusion footer .footer-column-wrapper .footer-left-column {
+    padding-left: 20px;
   }
   .conclusion footer .footer-column-wrapper .footer-left-column .footer-contact-section img {
     width: 35px;
@@ -1874,7 +1948,6 @@ body {
   background: #4295D3;
   position: absolute;
   width: 100%;
-  height: 100%;
 }
 
 .contact-page-contact {
