--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -793,6 +793,12 @@ body > * {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    gap: 45px;
+  }
+  @supports not (-webkit-gap: 45px) {
+    .media-section .media-wrapper .media-logo-container > * {
+      margin-top: 45px;
+    }
   }
 }
 
