--- a/delivr-aide-react-website-1.0/src/styles/_addKit.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_addKit.scss
@@ -174,7 +174,7 @@
     all: unset;
     border: 4px solid var(--main-font-color);
     border-radius: 25px;
-    color: var(--main-font-color);
+    color: black;
     padding: 15px;
     background: var(--main-font-color);
     transition: all 0.25s ease-in-out;
