--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -1863,7 +1863,7 @@ body > * {
   all: unset;
   border: 4px solid var(--main-font-color);
   border-radius: 25px;
-  color: var(--main-font-color);
+  color: black;
   padding: 15px;
   background: var(--main-font-color);
   -webkit-transition: all 0.25s ease-in-out;
