--- a/delivr-aide-react-website-1.0/src/styles/_addKit.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_addKit.scss
@@ -183,7 +183,7 @@
     font-size: 2vw;
 }
 
-#phoneNumber,#firstName,#lastName,#city,#zipCode,#adress,#phoneNumber,#mail,#confidentialité {
+#phoneNumber,#firstName,#lastName,#zipCode,#adress,#phoneNumber,#mail,#confidentialité {
     font-family: var(--main-font);
     font-size: 2vw;
 }
@@ -194,6 +194,17 @@
     color: var(--main-font-color);
     border: 4px solid var(--main-font-color);
 }
+
+.form-wrapper select:focus {
+    outline: none;
+    background: transparent;
+    border: 4px solid var(--main-font-color);
+}
+
+.form-wrapper select:hover {
+    cursor: pointer;
+}
+
 
 @media only screen and (max-width: 1000px) {
     .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .add-kit-hero-title {
