--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -1874,7 +1874,7 @@ body > * {
   font-size: 2vw;
 }
 
-#phoneNumber, #firstName, #lastName, #city, #zipCode, #adress, #phoneNumber, #mail, #confidentialité {
+#phoneNumber, #firstName, #lastName, #zipCode, #adress, #phoneNumber, #mail, #confidentialité {
   font-family: var(--main-font);
   font-size: 2vw;
 }
@@ -1884,6 +1884,16 @@ body > * {
   background: transparent;
   color: var(--main-font-color);
   border: 4px solid var(--main-font-color);
+}
+
+.form-wrapper select:focus {
+  outline: none;
+  background: transparent;
+  border: 4px solid var(--main-font-color);
+}
+
+.form-wrapper select:hover {
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 1000px) {
