--- a/delivr-aide-react-website-1.0/src/styles/_addKit.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_addKit.scss
@@ -188,6 +188,11 @@
     font-size: 2vw;
 }
 
+#city {
+    font-family: var(--main-font);
+    font-size: 2vw;
+}
+
 .form-wrapper input:focus {
     outline: none;
     background: transparent;
@@ -224,6 +229,7 @@
     }
     #phoneNumber,#firstName,#lastName,#city,#zipCode,#adress,#phoneNumber,#mail,#confidentialité {
         font-size: 6vw;
+        font-family: var(--main-font);
     }
     .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-submit {
         font-size: 8vw;
