--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -1489,6 +1489,10 @@ body > * {
   font-size: 24px;
 }
 
+.about-section-validation > * {
+  margin-bottom: 40px;
+}
+
 .div-li-politique {
   color: white;
   font-size: 1.3em;
