--- a/delivr-aide-react-website-1.0/src/styles/_politique.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_politique.scss
@@ -19,6 +19,9 @@
 }
 
 .about-section-validation {
+    &>* {
+        margin-bottom: 40px;
+    }
     width: 90vw;
     display: flex;
     align-items: center;
