--- a/delivr-aide-react-website-1.0/src/styles/_app.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_app.scss
@@ -315,6 +315,10 @@
                 height: 150px;
                 width: 275px;
             }
+            .fondationCarrefour {
+                height: 150px;
+                width: 200px;
+            }
         }
 }
 
@@ -529,7 +533,8 @@
         gap: 45px;
             @supports not (-webkit-gap: 45px) {
                 &>* {
-                    margin-top: 45px;
+                    margin-top: 25px;
+                    margin-left: 0px;
                 }
             }
     }
