--- a/delivr-aide-react-website-1.0/src/styles/_app.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_app.scss
@@ -68,7 +68,7 @@
             .hero-banner {
                 border-radius: 35px;
                 box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
-                width: 50vw;
+                width: 42vw;
             }
         }
     }
@@ -134,6 +134,8 @@
     justify-content: space-around;
     flex-direction: row;
     margin-bottom: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
     .france-map-text {
         font-family: $mainFont;
         font-size: 3.75vw;
