--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -141,7 +141,7 @@ body > * {
   border-radius: 35px;
   -webkit-box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
           box-shadow: 7px 7px 17px -1px rgba(0, 0, 0, 0.25);
-  width: 50vw;
+  width: 42vw;
 }
 
 .introduction-wrapper .introduction-sub-wrapper {
@@ -242,6 +242,8 @@ body > * {
       -ms-flex-direction: row;
           flex-direction: row;
   margin-bottom: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .available-city .france-map-text {
