--- a/delivr-aide-react-website-1.0/src/styles/_addKit.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_addKit.scss
@@ -1,237 +1,301 @@
 :root {
-    --main-font: 'Fredoka One', cursive;
-    --main-font-color: white;
+  --main-font: "Fredoka One", cursive;
+  --main-font-color: white;
 }
 
 .main-wrapper-flex {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  .main-wrapper-add-kit {
+    background: linear-gradient(180deg, #fc3a2f 0%, #0098d9 100%);
+    box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
     display: flex;
+    align-items: center;
     justify-content: center;
-    align-self: center;
-    .main-wrapper-add-kit {
-        background: linear-gradient(180deg, #FC3A2F 0%, #0098D9 100%);
-        box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
+    flex-direction: column;
+    padding-bottom: 10vh;
+    .form-main-wrapper {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      .add-kit-hero-title {
+        margin-top: 10vh;
+        color: var(--main-font-color);
+        font-family: var(--main-font);
+        font-size: 3vw;
+      }
+      .add-kit-hero-title-centered {
+        width: 80%;
+        margin-top: 10vh;
+        color: var(--main-font-color);
+        font-family: var(--main-font);
+        font-size: 3vw;
+        text-align: center;
+      }
+      .add-kit-introduction {
+        width: 80%;
+        margin-top: 10vh;
+        color: var(--main-font-color);
+        font-family: var(--main-font);
+        font-size: 2vw;
+        text-align: center;
+        font-style: italic;
+      }
+      .form-wrapper {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        padding-bottom: 10vh;
-        .form-main-wrapper {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            .add-kit-hero-title {
-                margin-top: 10vh;
-                color: var(--main-font-color);
-                font-family: var(--main-font);
-                font-size: 3vw;
-            }
-            .form-wrapper {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: column;
-                & > * {
-                    margin:.5em;
-                }
-                .form-firstname-lastname {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    flex-direction: row;
-                    & > * {
-                        margin:.5em;
-                    }
-                }
-                .form-city-info {
-                    display: flex;
-                    align-items: flex-start;
-                    justify-content: center;
-                    flex-direction: row;
-                    & > * {
-                        margin:.5em;
-                    }
-                }
-                .form-first-name {
-                    display: flex;
-                    align-items: flex-start;
-                    justify-content: center;
-                    flex-direction: column;
-                    & > * {
-                        margin:0.5em;
-                    }
-                }
-                .form-city-name {
-                    display: flex;
-                    align-items: flex-start;
-                    justify-content: center;
-                    flex-direction: column;
-                    & > * {
-                        margin:.5em;
-                    }
-                }
-                .form-zip-code {
-                    display: flex;
-                    align-items: flex-start;
-                    justify-content: center;
-                    flex-direction: column;
-                    & > * {
-                        margin:.5em;
-                    }
-                }
-                .form-number {
-                    display: flex;
-                    align-items: flex-start;
-                    justify-content: center;
-                    flex-direction: column;
-                    & > * {
-                        margin:.5em;
-                    }
-                }
-                .form-email {
-                    display: flex;
-                    align-items: flex-start;
-                    justify-content: center;
-                    flex-direction: column;
-                    & > * {
-                        margin:.5em;
-                    }
-                }
-                .form-account-connexion {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    flex-direction: row;
-                    & > * {
-                        margin:.5em;
-                    }
-                }
-                .form-submit {
-                    background: transparent;
-                    all: unset;
-                    border-radius: 25px;
-                    font-family: var(--main-font);
-                    font-size: 2vw;
-                    padding: 15px;
-                    background: transparent;
-                    align-self: center;
-                    box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
-                    border: 4px solid var(--main-font-color);
-                    transition: all 0.25s ease-in-out;
-                    color: var(--main-font-color);
-                }
-                .form-submit:hover {
-                    background: var(--main-font-color);
-                    color: black;
-                    cursor: pointer;
-                }
-            }
-            .politique-div {
-                width: 90%;
-                display: flex;
-                align-items: center;
-                justify-content: space-around;
-                & > * {
-                    margin:1.5em;
-                }
-            }
-            #confidentialité {
-                all: unset;
-                padding: 20px;
-                border-radius: 50%;
-                background: white;
-                border: 4px solid transparent;
-                transition: all 0.25s ease-in-out;
-            }
-            #confidentialité:hover {
-                cursor: pointer;
-            }
-            #confidentialité:checked {
-                border: 4px solid white;
-                background: $mainRed;
-            }
+        & > * {
+          margin: 0.5em;
         }
+        .form-firstname-lastname {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: row;
+          & > * {
+            margin: 0.5em;
+          }
+        }
+        .form-city-info {
+          display: flex;
+          align-items: flex-start;
+          justify-content: center;
+          flex-direction: row;
+          & > * {
+            margin: 0.5em;
+          }
+        }
+        .form-first-name {
+          display: flex;
+          align-items: flex-start;
+          justify-content: center;
+          flex-direction: column;
+          & > * {
+            margin: 0.5em;
+          }
+        }
+        .form-city-name {
+          display: flex;
+          align-items: flex-start;
+          justify-content: center;
+          flex-direction: column;
+          & > * {
+            margin: 0.5em;
+          }
+        }
+        .form-zip-code {
+          display: flex;
+          align-items: flex-start;
+          justify-content: center;
+          flex-direction: column;
+          & > * {
+            margin: 0.5em;
+          }
+        }
+        .form-number {
+          display: flex;
+          align-items: flex-start;
+          justify-content: center;
+          flex-direction: column;
+          & > * {
+            margin: 0.5em;
+          }
+        }
+        .form-email {
+          display: flex;
+          align-items: flex-start;
+          justify-content: center;
+          flex-direction: column;
+          & > * {
+            margin: 0.5em;
+          }
+        }
+        .form-account-connexion {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: row;
+          & > * {
+            margin: 0.5em;
+          }
+        }
+        .form-submit {
+          background: transparent;
+          all: unset;
+          border-radius: 25px;
+          font-family: var(--main-font);
+          font-size: 2vw;
+          padding: 15px;
+          background: transparent;
+          align-self: center;
+          box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
+          border: 4px solid var(--main-font-color);
+          transition: all 0.25s ease-in-out;
+          color: var(--main-font-color);
+        }
+        .form-submit:hover {
+          background: var(--main-font-color);
+          color: black;
+          cursor: pointer;
+        }
+      }
+      .politique-div {
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        & > * {
+          margin: 1.5em;
+        }
+      }
+      #confidentialité {
+        all: unset;
+        padding: 20px;
+        border-radius: 50%;
+        background: white;
+        border: 4px solid transparent;
+        transition: all 0.25s ease-in-out;
+      }
+      #confidentialité:hover {
+        cursor: pointer;
+      }
+      #confidentialité:checked {
+        border: 4px solid white;
+        background: $mainRed;
+      }
     }
+  }
 }
 
 .form-last-name {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    & > * {
-        margin:0.5em;
-    }
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  & > * {
+    margin: 0.5em;
+  }
 }
 
 .form-wrapper label {
-    font-family: var(--main-font);
-    color: var(--main-font-color);
-    font-size: 2vw;
+  font-family: var(--main-font);
+  color: var(--main-font-color);
+  font-size: 2vw;
 }
 
 .addKitInputForm {
-    all: unset;
-    border: 4px solid var(--main-font-color);
-    border-radius: 25px;
-    color: black;
-    padding: 15px;
-    background: var(--main-font-color);
-    transition: all 0.25s ease-in-out;
-    box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
-    font-family: var(--main-font);
-    font-size: 2vw;
+  all: unset;
+  border: 4px solid var(--main-font-color);
+  border-radius: 25px;
+  color: black;
+  padding: 15px;
+  background: var(--main-font-color);
+  transition: all 0.25s ease-in-out;
+  box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
+  font-family: var(--main-font);
+  font-size: 2vw;
 }
 
-#phoneNumber,#firstName,#lastName,#zipCode,#adress,#phoneNumber,#mail,#confidentialité {
-    font-family: var(--main-font);
-    font-size: 2vw;
+#phoneNumber,
+#firstName,
+#lastName,
+#zipCode,
+#adress,
+#phoneNumber,
+#mail,
+#confidentialité {
+  font-family: var(--main-font);
+  font-size: 2vw;
 }
 
 #city {
-    font-family: var(--main-font);
-    font-size: 2vw;
+  font-family: var(--main-font);
+  font-size: 2vw;
 }
 
 .form-wrapper input:focus {
-    outline: none;
-    background: transparent;
-    color: var(--main-font-color);
-    border: 4px solid var(--main-font-color);
+  outline: none;
+  background: transparent;
+  color: var(--main-font-color);
+  border: 4px solid var(--main-font-color);
 }
 
 .form-wrapper select:focus {
-    outline: none;
-    background: transparent;
-    border: 4px solid var(--main-font-color);
+  outline: none;
+  background: transparent;
+  border: 4px solid var(--main-font-color);
 }
 
 .form-wrapper select:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-
 @media only screen and (max-width: 1000px) {
-    .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .add-kit-hero-title {
-        font-size: 8vw;
+  .main-wrapper-flex {
+    .main-wrapper-add-kit {
+      .form-main-wrapper {
+        .add-kit-hero-title-centered {
+          font-size: 8vw;
+        }
+        .add-kit-hero-title {
+          font-size: 8vw;
+        }
+        .add-kit-introduction {
+          font-size: 5.5vw;
+        }
+      }
     }
-    .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper label {
-        font-size: 7vw;
-    }
-    .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-firstname-lastname {
-        flex-direction: column;
-    }
-    .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-city-info {
-        flex-direction: column;
-    }
-    .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-account-connexion {
-        flex-direction: column;
-    }
-    #phoneNumber,#firstName,#lastName,#city,#zipCode,#adress,#phoneNumber,#mail,#confidentialité {
-        font-size: 6vw;
-        font-family: var(--main-font);
-    }
-    .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-submit {
-        font-size: 8vw;
-    }
+  }
+
+  .main-wrapper-flex
+    .main-wrapper-add-kit
+    .form-main-wrapper
+    .form-wrapper
+    label {
+    font-size: 7vw;
+  }
+  .main-wrapper-flex
+    .main-wrapper-add-kit
+    .form-main-wrapper
+    .form-wrapper
+    .form-firstname-lastname {
+    flex-direction: column;
+  }
+  .main-wrapper-flex
+    .main-wrapper-add-kit
+    .form-main-wrapper
+    .form-wrapper
+    .form-city-info {
+    flex-direction: column;
+  }
+  .main-wrapper-flex
+    .main-wrapper-add-kit
+    .form-main-wrapper
+    .form-wrapper
+    .form-account-connexion {
+    flex-direction: column;
+  }
+  #phoneNumber,
+  #firstName,
+  #lastName,
+  #city,
+  #zipCode,
+  #adress,
+  #phoneNumber,
+  #mail,
+  #confidentialité {
+    font-size: 6vw;
+    font-family: var(--main-font);
+  }
+  .main-wrapper-flex
+    .main-wrapper-add-kit
+    .form-main-wrapper
+    .form-wrapper
+    .form-submit {
+    font-size: 8vw;
+  }
 }
