--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -1628,6 +1628,25 @@ footer
           flex-direction: column;
 }
 
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .video-container {
+  width: 90vw;
+  height: 90vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .video-container :nth-child(1) {
+  -webkit-box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
+          box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
+}
+
 .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .add-kit-hero-title {
   margin-top: 10vh;
   color: var(--main-font-color);
@@ -1637,7 +1656,7 @@ footer
 
 .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .add-kit-hero-title-centered {
   width: 80%;
-  margin-top: 10vh;
+  margin-top: 5vh;
   color: var(--main-font-color);
   font-family: var(--main-font);
   font-size: 3vw;
@@ -1970,6 +1989,19 @@ footer
 }
 
 @media only screen and (max-width: 1000px) {
+  .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .video-container {
+    width: 90vw;
+    height: 30vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
   .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .add-kit-hero-title-centered {
     font-size: 8vw;
   }
